# repo-sandbox-generator

./: .gitignore  README.md  docker_test_summary.json  pyproject.toml  requirements.txt  test_summary_analysis.ipynb
scripts/: generate_instance.py  run_docker_tests.py  run_docker_tests_parr.py
src/repo_sandbox/: __init__.py  cli.py
src/repo_sandbox/analyzer/: __init__.py  dependency_resolver.py  repo_analyzer.py  test_discovery.py  version_detector.py
src/repo_sandbox/generators/: __init__.py  docker_compose_generator.py  dockerfile_generator.py
src/repo_sandbox/utils/: __init__.py  file_utils.py  git_utils.py
